Fix T51963: Eevee: ASAN crash on copy_attrib_name

Bug introduced on f6bb3262f17.

CustomData_get_named_layer returns a different result than
CustomData_get_named_layer_index.